--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <title>Asian Delights Restaurant</title>
 </head>
 <body>
+    <header class="header"><!-- Start of header --> 
+        <div class="logo-area">
+            <img src="img/logo.png" alt="logo" class="logo">
+        </div>
+
+        <div class="text-box">
+            <h1 class="header-title">
+                <span class="header-title-main">ASIAN DELIGHTS</span>
+                <span class="header-title-main-comment">Delicious Asian Food</span>
+            </h1>
+        </div>
+    </header><!-- /End of header -->
+    
+
     
 </body>
 </html>
