added the reservation button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <span class="header-title-main">ASIAN DELIGHTS</span>
                 <span class="header-title-main-comment">Delicious Asian Food</span>
             </h1>
+            <a href="#" class="btn btn-color">Reservations</a>
         </div>
     </header><!-- /End of header -->
     
