--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <header class="header"><!-- Start of header --> 
-        <div class="logo-area">
-            <img src="img/logo.png" alt="logo" class="logo">
+        <div class="header__logo-area">
+            <img src="img/logo.png" alt="logo" class="header__logo">
         </div>
 
-        <div class="text-box">
-            <h1 class="header-title">
-                <span class="header-title-main">ASIAN DELIGHTS</span>
-                <span class="header-title-main-comment">Delicious Asian Food</span>
+        <div class="header__text-box">
+            <h1 class="heading-title">
+                <span class="heading-title--main">ASIAN DELIGHTS</span>
+                <span class="heading-title--comment">Delicious Asian Food</span>
             </h1>
-            <a href="#" class="btn btn-color">Reservations</a>
+            <a href="#" class="btn btn--color">Reservations</a>
         </div>
     </header><!-- /End of header -->
     
