scss code has been structured into different sccc folders

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <title>Asian Delights Restaurant</title>
 </head>
@@ -21,9 +21,6 @@
             </h1>
             <a href="#" class="btn btn--color">Reservations</a>
         </div>
-    </header><!-- /End of header -->
-    
-
-    
+    </header><!-- /End of header -->       
 </body>
 </html>
