--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Asian Delights Restaurant</title>
 </head>
 <body>
-    <header class="header"><!-- Start of header --> 
+    <header class="header">
         <div class="header__logo-area">
             <img src="img/logo.png" alt="logo" class="header__logo">
         </div>
@@ -21,6 +21,6 @@
             </h1>
             <a href="#" class="btn btn--color">Reservations</a>
         </div>
-    </header><!-- /End of header -->       
+    </header>     
 </body>
 </html>
